fix(about): right spacing and none-blurry image

--- a/assets/styles/templates/layouts/_home.scss
+++ b/assets/styles/templates/layouts/_home.scss
@@ -100,6 +100,10 @@
                 padding-bottom: 8rem;
             }
         }
+
+        &--firtText {
+            letter-spacing: -0.02rem;
+        }
     }
 
     &__scrollingCircle {
